; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_e100.c_e100_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_e100.c_e100_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nic = type { i32*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nic*)* @e100_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @e100_free(%struct.nic* %0) #0 {
  %2 = alloca %struct.nic*, align 8
  store %struct.nic* %0, %struct.nic** %2, align 8
  %3 = load %struct.nic*, %struct.nic** %2, align 8
  %4 = getelementptr inbounds %struct.nic, %struct.nic* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load %struct.nic*, %struct.nic** %2, align 8
  %9 = getelementptr inbounds %struct.nic, %struct.nic* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.nic*, %struct.nic** %2, align 8
  %12 = getelementptr inbounds %struct.nic, %struct.nic* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load %struct.nic*, %struct.nic** %2, align 8
  %15 = getelementptr inbounds %struct.nic, %struct.nic* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @pci_free_consistent(i32 %10, i32 4, i32* %13, i32 %16)
  %18 = load %struct.nic*, %struct.nic** %2, align 8
  %19 = getelementptr inbounds %struct.nic, %struct.nic* %18, i32 0, i32 0
  store i32* null, i32** %19, align 8
  br label %20

20:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @pci_free_consistent(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
